完成点位管理开发

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ selenium-debug.log
 *.njsproj
 *.sln
 *.local
+.cursorrules
+.history
 
+
+
+# 忽略 package-lock.json 和 yarn.lock 文件
 package-lock.json
 yarn.lock
